--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+black = "24.8.0"
+flake8 = "7.1.1"
+vulture = "2.11"
+pandas = "2.2.2"
+pytest = "8.3.2"
+dbt-core = "1.8.5"
+setuptools = "72.2.0"
+dbt-postgres = "1.8.2"
+psycopg2-binary = "2.9.9"
 
 
 [build-system]
