--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "elt-practice-2024"
 version = "0.1.0"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Practice repo for learning about ELT in 2024"
+authors = ["Cristian Nuno <cnuno2@illinois.edu>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "3.12.5"
 black = "24.8.0"
 flake8 = "7.1.1"
 vulture = "2.11"
