--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,5 @@ psycopg2-binary = "2.9.9"
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core==1.8.0"]
 build-backend = "poetry.core.masonry.api"
