--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -21,9 +21,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Run Linting & Tests
         run: |
-          python -m pip install --upgrade pip
           pip install setuptools=="72.2.0"
-          pip install -r dev/dev-requirements.txt
+          pip install poetry=="1.8.0"
+          poetry install --compile --no-root --only main
           flake8 elt_practice_2024/
           vulture elt_practice_2024/
           black elt_practice_2024/ --check
