--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dbt-core = "1.8.5"
 setuptools = "72.2.0"
 dbt-postgres = "1.8.2"
 psycopg2-binary = "2.9.9"
+yamllint = "1.35.1"
 
 
 [build-system]
