--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,9 @@ repos:
       rev: 'v2.11'  # or any later Vulture version
       hooks:
           - id: vulture
+    - repo: https://github.com/python-poetry/poetry
+      rev: '1.8.0'
+      hooks:
+          - id: poetry-check
+          - id: poetry-lock
+          - id: poetry-install
