--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,4 +22,5 @@ repos:
       hooks:
           - id: poetry-check
           - id: poetry-lock
+          - id: poetry-export # this creates a requirements.txt used in next command
           - id: poetry-install
