--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,7 +7,7 @@ on:  # yamllint disable-line rule:truthy
       - staging
       - 'release/**'
 jobs:
-  lint_flake8_vulture_black_py3:
+  lint_yaml_flake8_vulture_black_py3:
     runs-on: ubuntu-latest
     steps:
       # ----------------------------------------------
@@ -45,6 +45,7 @@ jobs:
           poetry install --no-interaction --compile --no-root --only main
       - name: Run linters
         run: |
-          poetry run flake8 elt_practice_2024/
-          poetry run vulture elt_practice_2024/
-          poetry run black elt_practice_2024/ --check
+          poetry run yamllint .
+          poetry run flake8 .
+          poetry run vulture .
+          poetry run black . --check
