feature/poetry-yamllint-pre-commit: Extend pre-commit and github action to include: * Poetry lock file is valid via pre-commit hook, and as a result, generate a requirements.txt file * All .yaml files are valid via pre-commit hook * Extend github action to lint yaml files as well * Validate that devs can use poetry shell to run pre-commit to ensure that there local machines can run the same things as github action

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "elt-practice-2024"
-version = "0.2.1"
+version = "0.2.2"
 description = "Practice repo for learning about ELT in 2024"
 authors = ["Cristian Nuno <cnuno2@illinois.edu>"]
 readme = "README.md"
@@ -16,7 +16,9 @@ dbt-core = "1.8.5"
 setuptools = "72.2.0"
 dbt-postgres = "1.8.2"
 psycopg2-binary = "2.9.9"
+pendulum = "3.0.0"
 yamllint = "1.35.1"
+pre-commit = "3.8.0"
 
 
 [build-system]
