--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -3,7 +3,20 @@ FROM python:3.12.5-slim
 
 # NOTE: install required software
 RUN apt-get update && \
-    apt-get install --no-install-suggests --no-install-recommends --yes wget zip unzip tree curl
+    apt-get install --no-install-suggests --no-install-recommends --yes \
+    wget=1.21.* \
+    zip=3.* \
+    unzip=6.* \
+    tree=2.1.* \
+    curl=7.88.* \
+    && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# NOTE: install hadolint software to lint dockerfile
+RUN wget --progress=dot:giga --output-document=hadolint https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64 && \
+    mv hadolint /usr/local/bin/hadolint && \
+    chmod +x /usr/local/bin/hadolint
 
 # NOTE: setup virtual environment
 ENV VIRTUAL_ENV="/opt/venv"
@@ -12,12 +25,16 @@ ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 
 # NOTE: install poetry via pip in venv
 #       see details here https://python-poetry.org/docs/#installing-manually
-RUN python3 -m pip install setuptools==72.2.0
-RUN python3 -m pip install poetry==1.8.0
+RUN python3 -m pip install setuptools==72.2.0 --no-cache-dir && \
+    python3 -m pip install poetry==1.8.0 --no-cache-dir
 ENV PATH="$VENV_PATH/bin/poetry:$PATH"
 
-# NOTE: explicitly add the two poetry files to the relevant dir within container
-ADD pyproject.toml poetry.lock ./
+# NOTE: set workdir to be the project dir
+WORKDIR /elt-practice-2024/
+
+# NOTE: explicitly add the two local poetry files to the relevant dir within container
+COPY pyproject.toml poetry.lock ./
+
 # NOTE: install packages via poetry
 RUN poetry install --no-interaction --compile --no-root --only main
 
