--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,8 @@ repos:
       rev: 'v2.11'  # or any later Vulture version
       hooks:
           - id: vulture
+    - repo: https://github.com/pre-commit/mirrors-mypy
+      rev: 'v1.11.1'
+      hooks:
+          - id: mypy
+            additional_dependencies: ["types-requests==2.32.0.20240712"]
