--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -43,8 +43,8 @@ COPY pyproject.toml poetry.lock ./
 RUN poetry install --no-interaction --compile --no-root --only main && \
     # NOTE: disable warnings about explicitly installing export plugin since that's already done
     poetry config warnings.export false && \
-    # NOTE: grant specific user ownership level access to project dir
-    chown -R customuser:customgroup /elt-practice-2024/
+    # NOTE: grant specific user ownership level access to project dir & venv
+    chown -R customuser:customgroup /elt-practice-2024/ $VIRTUAL_ENV
 
 # NOTE: switch to custom user
 USER customuser
