--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "elt-practice-2024"
-version = "0.4.0"
+version = "0.5.0"
 description = "Practice repo for learning about ELT in 2024"
 authors = ["Cristian Nuno <cnuno2@illinois.edu>"]
 readme = "README.md"
@@ -25,6 +25,7 @@ poetry-plugin-export = "1.8.0"
 mypy = "1.11.1"
 pip = "24.2"
 types-requests = "2.32.0.20240712"
+openpyxl = "3.1.3"
 
 [tool.poetry.plugins."poetry.application.plugin"]
 export = "poetry_plugin_export.plugins:ExportApplicationPlugin"
