feature/data-extraction-v2: Debugging relative imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ pythonpath = [
   "src"
 ]
 addopts = [
+    "--import-mode=importlib",
     "--ignore=tests/archive/",
     "--cov=src",
     "--cov-report=html",
