Create ClientDataManager custom class * Enables easy parsing of json client data source file * Create new tests * Obtain 100% code coverage for input data extraction .py files feature/data-extraction-v2:

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,9 +49,11 @@ testpaths = [
 pythonpath = [
   "src/elt_practice_2024"
 ]
+norecursedirs = [
+    "src/tests/*"
+]
 addopts = [
     "--import-mode=importlib",
-    "--ignore=src/tests/archive/",
     "--cov=src/elt_practice_2024",
     "--cov-report=html",
     "--cov-report=term",
