feature/data-extraction-v2: Initialize postgres db with schema

--- a/.env_copy
+++ b/.env_copy
@@ -2,5 +2,6 @@
 COMPOSE_PGADMIN_DEFAULT_EMAIL=<email>
 COMPOSE_PGADMIN_DEFAULT_PASSWORD=<password>
 COMPOSE_POSTGRES_DB=<database>
+COMPOSE_POSTGRES_SCHEMA=<schema>
 COMPOSE_POSTGRES_USER=<user>
 COMPOSE_POSTGRES_PASSWORD=<password>
