--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -1,2 +1,5 @@
 # NOTE: base image is from Linux
 FROM postgres:16.4-bookworm
+
+COPY /scripts/postgres/init.sh /docker-entrypoint-initdb.d/
+RUN chown -R root:root /docker-entrypoint-initdb.d/
