--- a/compose.yml
+++ b/compose.yml
@@ -4,6 +4,11 @@ services:
     container_name: python
     build:
       dockerfile: Dockerfile.python
+    environment:
+      POSTGRES_DB: ${COMPOSE_POSTGRES_DB}
+      POSTGRES_USER: ${COMPOSE_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${COMPOSE_POSTGRES_PASSWORD}
+      POSTGRES_SCHEMA: ${COMPOSE_POSTGRES_SCHEMA}
     restart: always
     depends_on:
       postgres:
@@ -21,6 +26,7 @@ services:
       POSTGRES_DB: ${COMPOSE_POSTGRES_DB}
       POSTGRES_USER: ${COMPOSE_POSTGRES_USER}
       POSTGRES_PASSWORD: ${COMPOSE_POSTGRES_PASSWORD}
+      POSTGRES_SCHEMA: ${COMPOSE_POSTGRES_SCHEMA}
     ports:
       - 5432:5432
     restart: always
