feature/data-extraction-v2: Create service account postgres python user

--- a/.env_copy
+++ b/.env_copy
@@ -2,6 +2,9 @@
 COMPOSE_PGADMIN_DEFAULT_EMAIL=<email>
 COMPOSE_PGADMIN_DEFAULT_PASSWORD=<password>
 COMPOSE_POSTGRES_DB=<database>
-COMPOSE_POSTGRES_SCHEMA=<schema>
-COMPOSE_POSTGRES_USER=<user>
-COMPOSE_POSTGRES_PASSWORD=<password>
+COMPOSE_POSTGRES_ADMIN_USER=<user1>
+COMPOSE_POSTGRES_ADMIN_PASSWORD=<password1>
+COMPOSE_POSTGRES_PYTHON_USER=<user2>
+COMPOSE_POSTGRES_PYTHON_PASSWORD=<password2>
+COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT=<integer>
+
