--- a/compose.yml
+++ b/compose.yml
@@ -6,8 +6,8 @@ services:
       dockerfile: Dockerfile.python
     environment:
       POSTGRES_DB: ${COMPOSE_POSTGRES_DB}
-      POSTGRES_USER: ${COMPOSE_POSTGRES_USER}
-      POSTGRES_PASSWORD: ${COMPOSE_POSTGRES_PASSWORD}
+      POSTGRES_PYTHON_USER: ${COMPOSE_POSTGRES_PYTHON_USER}
+      POSTGRES_PYTHON_PASSWORD: ${COMPOSE_POSTGRES_PYTHON_PASSWORD}
       POSTGRES_SCHEMA: ${COMPOSE_POSTGRES_SCHEMA}
     restart: always
     depends_on:
@@ -24,14 +24,17 @@ services:
       dockerfile: Dockerfile.postgres
     environment:
       POSTGRES_DB: ${COMPOSE_POSTGRES_DB}
-      POSTGRES_USER: ${COMPOSE_POSTGRES_USER}
-      POSTGRES_PASSWORD: ${COMPOSE_POSTGRES_PASSWORD}
+      POSTGRES_USER: ${COMPOSE_POSTGRES_ADMIN_USER}
+      POSTGRES_PASSWORD: ${COMPOSE_POSTGRES_ADMIN_PASSWORD}
       POSTGRES_SCHEMA: ${COMPOSE_POSTGRES_SCHEMA}
+      POSTGRES_PYTHON_USER: ${COMPOSE_POSTGRES_PYTHON_USER}
+      POSTGRES_PYTHON_PASSWORD: ${COMPOSE_POSTGRES_PYTHON_PASSWORD}
+      POSTGRES_PYTHON_CONNECTION_LIMIT: ${COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT}
     ports:
       - 5432:5432
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "psql -U ${COMPOSE_POSTGRES_USER} -d ${COMPOSE_POSTGRES_DB} -c 'SELECT 1' || exit 1"]
+      test: ["CMD-SHELL", "psql -U ${COMPOSE_POSTGRES_ADMIN_USER} -d ${COMPOSE_POSTGRES_DB} -c 'SELECT 1' || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
