--- a/.env_copy
+++ b/.env_copy
@@ -1,10 +1,13 @@
 # NOTE: all env variables will have compose_ prefix to avoid clashing with anything in user's local env variables
 COMPOSE_PGADMIN_DEFAULT_EMAIL=<email>
 COMPOSE_PGADMIN_DEFAULT_PASSWORD=<password>
+COMPOSE_POSTGRES_HOST=<host>
+COMPOSE_POSTGRES_PORT=<port>
 COMPOSE_POSTGRES_DB=<database>
 COMPOSE_POSTGRES_ADMIN_USER=<user1>
 COMPOSE_POSTGRES_ADMIN_PASSWORD=<password1>
 COMPOSE_POSTGRES_PYTHON_USER=<user2>
 COMPOSE_POSTGRES_PYTHON_PASSWORD=<password2>
+COMPOSE_POSTGRES_PYTHON_LIBPQ_CONNECTION_STRING="host=${COMPOSE_POSTGRES_HOST} port=${COMPOSE_POSTGRES_PORT} dbname=${COMPOSE_POSTGRES_DB} user=${COMPOSE_POSTGRES_PYTHON_USER} password=${COMPOSE_POSTGRES_PYTHON_PASSWORD}"
 COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT=<integer>
 
