--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -1,5 +1,13 @@
 # NOTE: base image is from Linux
 FROM postgres:16.4-bookworm
 
+# NOTE: specify root user
+USER root
+# NOTE: copy postgres init script into container
 COPY /scripts/postgres/init.sh /docker-entrypoint-initdb.d/
-RUN chown -R root:root /docker-entrypoint-initdb.d/
+# NOTE: ensure only root and postgres user own these files
+RUN chown -R root:root /docker-entrypoint-initdb.d/ && \
+    chown -R postgres:999 /docker-entrypoint-initdb.d/
+
+# NOTE: switch to postgres user
+USER postgres
