--- a/compose.yml
+++ b/compose.yml
@@ -5,9 +5,7 @@ services:
     build:
       dockerfile: Dockerfile.python
     environment:
-      POSTGRES_DB: ${COMPOSE_POSTGRES_DB}
-      POSTGRES_PYTHON_USER: ${COMPOSE_POSTGRES_PYTHON_USER}
-      POSTGRES_PYTHON_PASSWORD: ${COMPOSE_POSTGRES_PYTHON_PASSWORD}
+      POSTGRES_PYTHON_LIBPQ_CONNECTION_STRING: ${COMPOSE_POSTGRES_PYTHON_LIBPQ_CONNECTION_STRING}
       POSTGRES_SCHEMA: ${COMPOSE_POSTGRES_SCHEMA}
     restart: always
     depends_on:
@@ -23,19 +21,25 @@ services:
     build:
       dockerfile: Dockerfile.postgres
     environment:
-      POSTGRES_DB: ${COMPOSE_POSTGRES_DB}
-      POSTGRES_USER: ${COMPOSE_POSTGRES_ADMIN_USER}
-      POSTGRES_PASSWORD: ${COMPOSE_POSTGRES_ADMIN_PASSWORD}
-      POSTGRES_SCHEMA: ${COMPOSE_POSTGRES_SCHEMA}
+      # NOTE: native postgres variables
+      PGUSER: ${COMPOSE_POSTGRES_ADMIN_USER}
+      PGPASSWORD: ${COMPOSE_POSTGRES_ADMIN_PASSWORD}
+      PGDATABASE: ${COMPOSE_POSTGRES_DB}
+      PGPORT: ${COMPOSE_POSTGRES_PORT}
+      # NOTE: variables to be used for service account role
       POSTGRES_PYTHON_USER: ${COMPOSE_POSTGRES_PYTHON_USER}
       POSTGRES_PYTHON_PASSWORD: ${COMPOSE_POSTGRES_PYTHON_PASSWORD}
       POSTGRES_PYTHON_CONNECTION_LIMIT: ${COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT}
+      # NOTE: variables recommended by docker
+      POSTGRES_USER: ${COMPOSE_POSTGRES_ADMIN_USER}
+      POSTGRES_PASSWORD: ${COMPOSE_POSTGRES_ADMIN_PASSWORD}
+      POSTGRES_DB: ${COMPOSE_POSTGRES_DB}
     ports:
-      - 5432:5432
+      - ${COMPOSE_POSTGRES_PORT}:${COMPOSE_POSTGRES_PORT}
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "psql -U ${COMPOSE_POSTGRES_ADMIN_USER} -d ${COMPOSE_POSTGRES_DB} -c 'SELECT 1' || exit 1"]
-      interval: 10s
+      test: ["CMD-SHELL", "psql -U ${COMPOSE_POSTGRES_ADMIN_USER} -d ${COMPOSE_POSTGRES_DB} -c 'SELECT 1;' || exit 1"]
+      interval: 2s
       timeout: 5s
       retries: 5
     volumes:
