--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pip = "24.2"
 types-requests = "2.32.0.20240712"
 openpyxl = "3.1.3"
 pandas-stubs = "1.2.0.40"
+types-psycopg2 = "2.9.21.20240819"
 
 [tool.poetry.plugins."poetry.application.plugin"]
 export = "poetry_plugin_export.plugins:ExportApplicationPlugin"
