--- a/.github/workflows/lint_and_test.yaml
+++ b/.github/workflows/lint_and_test.yaml
@@ -7,25 +7,24 @@ on:  # yamllint disable-line rule:truthy
       - staging
       - 'release/**'
 env:
-  COMPOSE_POSTGRES_HOST=not_host
+  COMPOSE_PGADMIN_DEFAULT_EMAIL: ${{ secrets.COMPOSE_PGADMIN_DEFAULT_EMAIL }}
+  COMPOSE_PGADMIN_DEFAULT_PASSWORD: ${{ secrets.PGADMIN_DEFAULT_PASSWORD }}
+  COMPOSE_POSTGRES_HOST: ${{ secrets.COMPOSE_POSTGRES_HOST }}
+  COMPOSE_POSTGRES_PORT: ${{ secrets.COMPOSE_POSTGRES_PORT }}
+  COMPOSE_POSTGRES_DB: ${{ secrets.COMPOSE_POSTGRES_DB }}
+  COMPOSE_POSTGRES_SCHEMA: ${{ secrets.COMPOSE_POSTGRES_SCHEMA }}
+  COMPOSE_POSTGRES_ADMIN_USER: ${{ secrets.COMPOSE_POSTGRES_ADMIN_USER }}
+  COMPOSE_POSTGRES_ADMIN_PASSWORD: ${{ secrets.COMPOSE_POSTGRES_ADMIN_PASSWORD }}
+  COMPOSE_POSTGRES_PYTHON_USER: ${{ secrets.COMPOSE_POSTGRES_PYTHON_USER }}
+  COMPOSE_POSTGRES_PYTHON_PASSWORD: ${{ secrets.COMPOSE_POSTGRES_PYTHON_PASSWORD }}
+  COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT: ${{ secrets.COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT }}
+
 jobs:
   lint_and_test:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout repo and set environment variables
         uses: actions/checkout@v4
-        env:
-          COMPOSE_PGADMIN_DEFAULT_EMAIL: ${{ secrets.COMPOSE_PGADMIN_DEFAULT_EMAIL }}
-          COMPOSE_PGADMIN_DEFAULT_PASSWORD: ${{ secrets.PGADMIN_DEFAULT_PASSWORD }}
-          # COMPOSE_POSTGRES_HOST: ${{ secrets.COMPOSE_POSTGRES_HOST }}
-          COMPOSE_POSTGRES_PORT: ${{ secrets.COMPOSE_POSTGRES_PORT }}
-          COMPOSE_POSTGRES_DB: ${{ secrets.COMPOSE_POSTGRES_DB }}
-          COMPOSE_POSTGRES_SCHEMA: ${{ secrets.COMPOSE_POSTGRES_SCHEMA }}
-          COMPOSE_POSTGRES_ADMIN_USER: ${{ secrets.COMPOSE_POSTGRES_ADMIN_USER }}
-          COMPOSE_POSTGRES_ADMIN_PASSWORD: ${{ secrets.COMPOSE_POSTGRES_ADMIN_PASSWORD }}
-          COMPOSE_POSTGRES_PYTHON_USER: ${{ secrets.COMPOSE_POSTGRES_PYTHON_USER }}
-          COMPOSE_POSTGRES_PYTHON_PASSWORD: ${{ secrets.COMPOSE_POSTGRES_PYTHON_PASSWORD }}
-          COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT: ${{ secrets.COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT }}
       - name: Create a composite environment variable
         run: |
           # Construct the composite environment variable
