feature/data_ingestion: Rename action

--- a/.github/workflows/lint_and_test.yaml
+++ b/.github/workflows/lint_and_test.yaml
@@ -1,5 +1,5 @@
 ---
-name: Lint and Test
+name: Lint and Test through Docker
 on:  # yamllint disable-line rule:truthy
   pull_request:
     branches:
