--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -4,9 +4,11 @@ FROM python:3.12.5-slim
 # Switch to superuser
 USER root
 
-# Create a custom user with UID 1234 and GID 1234
+# Create a custom user with UID 1001 and GID 1234
+# NOTE: theory here is that the UID must match that of GA runner, read more here
+#       https://stackoverflow.com/a/78089752/7954106
 RUN groupadd -g 1234 customgroup && \
-    useradd -m -u 1234 -g customgroup customuser
+    useradd -m -u 1001 -g customgroup customuser
 RUN echo "'Inside Container:' && echo 'User: $(whoami) UID: $(id -u) GID: $(id -g)'"
 
 # NOTE: install required software
