feature/init_dbt: Use env vars within profiles.yml

--- a/.env_copy
+++ b/.env_copy
@@ -10,4 +10,5 @@ COMPOSE_POSTGRES_PYTHON_USER=<user2>
 COMPOSE_POSTGRES_PYTHON_PASSWORD=<password2>
 COMPOSE_POSTGRES_PYTHON_LIBPQ_CONNECTION_STRING="host=${COMPOSE_POSTGRES_HOST} port=${COMPOSE_POSTGRES_PORT} dbname=${COMPOSE_POSTGRES_DB} user=${COMPOSE_POSTGRES_PYTHON_USER} password=${COMPOSE_POSTGRES_PYTHON_PASSWORD}"
 COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT=<integer>
-
+# NOTE: keep this dbt line as-is
+DBT_PROFILES_DIR=/elt-practice-2024/src/elt_dbt
