--- a/compose.yml
+++ b/compose.yml
@@ -7,6 +7,13 @@ services:
     environment:
       POSTGRES_PYTHON_LIBPQ_CONNECTION_STRING: ${COMPOSE_POSTGRES_PYTHON_LIBPQ_CONNECTION_STRING}
       POSTGRES_SCHEMA: ${COMPOSE_POSTGRES_SCHEMA}
+      DBT_PROFILES_DIR: ${COMPOSE_DBT_PROFILES_DIR}
+      POSTGRES_USER: ${COMPOSE_POSTGRES_ADMIN_USER}
+      POSTGRES_PASSWORD: ${COMPOSE_POSTGRES_ADMIN_PASSWORD}
+      POSTGRES_DB: ${COMPOSE_POSTGRES_DB}
+      POSTGRES_PORT: ${COMPOSE_POSTGRES_PORT}
+      POSTGRES_HOST: ${COMPOSE_POSTGRES_HOST}
+      POSTGRES_CONNECTION_LIMIT: ${COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT}
     restart: always
     depends_on:
       postgres:
