feature/init_dbt: Add proper permissions to dbt schema for service account

--- a/compose.yml
+++ b/compose.yml
@@ -37,6 +37,7 @@ services:
       POSTGRES_PYTHON_USER: ${COMPOSE_POSTGRES_PYTHON_USER}
       POSTGRES_PYTHON_PASSWORD: ${COMPOSE_POSTGRES_PYTHON_PASSWORD}
       POSTGRES_PYTHON_CONNECTION_LIMIT: ${COMPOSE_POSTGRES_PYTHON_CONNECTION_LIMIT}
+      POSTGRES_SCHEMA: ${COMPOSE_POSTGRES_SCHEMA}
       # NOTE: variables recommended by docker
       POSTGRES_USER: ${COMPOSE_POSTGRES_ADMIN_USER}
       POSTGRES_PASSWORD: ${COMPOSE_POSTGRES_ADMIN_PASSWORD}
