--- a/src/elt_dbt/dbt_project.yml
+++ b/src/elt_dbt/dbt_project.yml
@@ -30,11 +30,7 @@ flags:
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
 models:
   elt_dbt:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    client_acme:
+      +schema: client_acme
