--- a/src/elt_dbt/profiles.yml
+++ b/src/elt_dbt/profiles.yml
@@ -4,10 +4,10 @@ elt_dbt:
   outputs:
     dev:
       type: postgres
-      host: "{{ env_var('POSTGRES_HOST') }}"
-      port: "{{ env_var('POSTGRES_PORT') | as_number }}"
-      dbname: "{{ env_var('POSTGRES_DB') }}"
-      schema: "{{ env_var('POSTGRES_SCHEMA') }}"
-      user: "{{ env_var('POSTGRES_USER') }}"
-      pass: "{{ env_var('POSTGRES_PASSWORD') }}"
-      threads: "{{ env_var('POSTGRES_CONNECTION_LIMIT') | int }}"
+      host: "{{ env_var('DBT_POSTGRES_HOST') }}"
+      port: "{{ env_var('DBT_POSTGRES_PORT') | as_number }}"
+      dbname: "{{ env_var('DBT_POSTGRES_DB') }}"
+      schema: "{{ env_var('DBT_POSTGRES_SCHEMA') }}"
+      user: "{{ env_var('DBT_POSTGRES_USER') }}"
+      pass: "{{ env_var('DBT_POSTGRES_PASSWORD') }}"
+      threads: "{{ env_var('DBT_POSTGRES_CONNECTION_LIMIT') | int }}"
