--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pandas-stubs = "1.2.0.40"
 types-psycopg2 = "2.9.21.20240819"
 sqlfluff = "3.2.0"
 shandy-sqlfmt = "0.23.2"
+sqlfluff-templater-dbt = "3.2.0"
 
 [tool.poetry.plugins."poetry.application.plugin"]
 export = "poetry_plugin_export.plugins:ExportApplicationPlugin"
@@ -86,16 +87,16 @@ ignore_missing_imports = true
 
 
 [tool.sqlfluff.core]
-templater = "jinja"
+templater = "dbt"
 sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
 ignore_paths = [
     "src/elt_dbt/dbt_packages",
     "src/elt_dbt/models/example",
+    "src/elt_dbt/target",
 ]
 # Supported dialects https://docs.sqlfluff.com/en/stable/perma/dialects.html
 # Or run 'sqlfluff dialects'
 dialect = "postgres"
-
 
 # Comma separated list of rules to exclude, or None
 # See https://docs.sqlfluff.com/en/stable/perma/rule_disabling.html
@@ -104,6 +105,7 @@ dialect = "postgres"
 exclude_rules = [
     "ambiguous.column_count",
     "structure.column_order",
+    "LT02",
 ]
 
 # The standard max_line_length is 80 in line with the convention of
@@ -111,6 +113,10 @@ exclude_rules = [
 # something a little longer.
 # Set to zero or negative to disable checks.
 max_line_length = 120
+
+# use tabs for indents
+indent_unit = "tab"
+comma_style = "trailing"
 
 # CPU processes to use while linting.
 # The default is "single threaded" to allow easy debugging, but this
@@ -122,10 +128,12 @@ processes = 1
 
 # If using the dbt templater, we recommend setting the project dir.
 [tool.sqlfluff.templater.dbt]
-project_dir = "/src/elt_dbt/"
+project_dir = "src/elt_dbt"
+profiles_dir = "src/elt_dbt"
 
 [tool.sqlfluff.templater.jinja]
 apply_dbt_builtins = true
+load_macros_from_path = "src/elt_dbt/macros"
 
 [tool.sqlfluff.indentation]
 # While implicit indents are not enabled by default. Many of the
@@ -145,12 +153,17 @@ min_alias_length = 3
 # formatting for any of these syntax elements then set them to "upper".
 # See https://stackoverflow.com/questions/608196/why-should-i-capitalize-my-sql-keywords-is-there-a-good-reason
 [tool.sqlfluff.rules.capitalisation.keywords]
-capitalisation_policy = "upper"
+capitalisation_policy = "lower"
 [tool.sqlfluff.rules.capitalisation.identifiers]
-extended_capitalisation_policy = "upper"
+extended_capitalisation_policy = "lower"
 [tool.sqlfluff.rules.capitalisation.functions]
-extended_capitalisation_policy = "upper"
+extended_capitalisation_policy = "lower"
 [tool.sqlfluff.rules.capitalisation.literals]
-capitalisation_policy = "upper"
+capitalisation_policy = "lower"
 [tool.sqlfluff.rules.capitalisation.types]
-extended_capitalisation_policy = "upper"
+extended_capitalisation_policy = "lower"
+
+[tool.sqlfmt]
+line_length = 120
+check = true
+dialect = "polyglot"
