--- a/src/elt_dbt/models/sources/_sources__sources.yml
+++ b/src/elt_dbt/models/sources/_sources__sources.yml
@@ -2,9 +2,136 @@
 version: 2
 
 sources:
+  - name: client_hooli
+    description: '{{ doc("source_client_hooli_description") }}'
+    database: '{{ env_var("DBT_POSTGRES_DBT") }}'
+    schema: client_hooli
+    tables:
+      - name: processed_hooli_patient_membership_202307
+        loaded_at_field: modified_on
+        tags:
+          - client_hooli
+          - source
+          - members
+        columns:
+          - name: eligibility_date
+            description: '{{ doc("column_eligibility_date") }}'
+            data_type: varchar
+          - name: member_id
+            description: '{{ doc("column_member_id") }}'
+            data_type: varchar
+            data_tests:
+              - not_null
+          - name: member_full_name
+            description: '{{ doc("column_member_first_name") }}'
+            data_type: varchar
+          - name: date_of_birth
+            description: '{{ doc("column_date_of_birth") }}'
+            data_type: varchar
+          - name: age_in_mths_no
+            description: '{{ doc("column_age_in_mths_no") }}'
+            data_type: varchar
+          - name: gender
+            description: '{{ doc("column_gender") }}'
+            data_type: varchar
+          - name: member_address1
+            description: '{{ doc("column_member_address1") }}'
+            data_type: varchar
+          - name: member_address2
+            description: '{{ doc("column_member_address2") }}'
+            data_type: varchar
+          - name: member_city
+            description: '{{ doc("column_city") }}'
+            data_type: varchar
+          - name: member_state
+            description: '{{ doc("column_state") }}'
+            data_type: varchar
+          - name: member_zip
+            description: '{{ doc("column_zip") }}'
+            data_type: varchar
+          - name: member_phone
+            description: '{{ doc("column_phone_number") }}'
+            data_type: varchar
+          - name: client_name
+            description: '{{ doc("column_client_name") }}'
+          - name: client_id
+            description: '{{ doc("column_client_id") }}'
+            data_type: varchar
+            data_tests:
+              - not_null
+          - name: internal_filename
+            description: '{{ doc("column_internal_filename") }}'
+            data_type: varchar
+          - name: external_filename
+            description: '{{ doc("column_external_filename") }}'
+            data_type: varchar
+          - name: created_on
+            description: '{{ doc("column_created_on") }}'
+            data_type: varchar
+          - name: modified_on
+            description: '{{ doc("column_modified_on") }}'
+            data_type: varchar
+      - name: processed_hooli_patient_claim_202307
+        loaded_at_field: modified_on
+        tags:
+          - client_hooli
+          - source
+          - claims
+        columns:
+          - name: claim_category
+            description: '{{ doc("column_claim_category") }}'
+            data_type: varchar
+          - name: member_id
+            description: '{{ doc("column_member_id") }}'
+            data_type: varchar
+            data_tests:
+              - not_null
+          - name: claim_number
+            description: '{{ doc("column_claim_number") }}'
+            data_type: varchar
+          - name: date_received
+            description: '{{ doc("column_date_received") }}'
+            data_type: varchar
+          - name: hospital_service
+            description: '{{ doc("column_hospital_service") }}'
+            data_type: varchar
+          - name: code_system
+            description: '{{ doc("column_coding_system") }}'
+            data_type: varchar
+          - name: code
+            description: '{{ doc("column_coding_system") }}'
+            data_type: varchar
+          - name: diagnosis_type
+            description: '{{ doc("column_primary_diagnosis") }}'
+            data_type: varchar
+          - name: cost_total
+            description: '{{ doc("column_total_billed") }}'
+            data_type: varchar
+          - name: status
+            description: '{{ doc("column_processing_status") }}'
+            data_type: varchar
+          - name: client_name
+            description: '{{ doc("column_client_name") }}'
+          - name: client_id
+            description: '{{ doc("column_client_id") }}'
+            data_type: varchar
+            data_tests:
+              - not_null
+          - name: internal_filename
+            description: '{{ doc("column_internal_filename") }}'
+            data_type: varchar
+          - name: external_filename
+            description: '{{ doc("column_external_filename") }}'
+            data_type: varchar
+          - name: created_on
+            description: '{{ doc("column_created_on") }}'
+            data_type: varchar
+          - name: modified_on
+            description: '{{ doc("column_modified_on") }}'
+            data_type: varchar
   - name: client_acme
     description: '{{ doc("source_client_acme_description") }}'
-    database: "{{ env_var('DBT_POSTGRES_DB') }}"
+    database: '{{ env_var("DBT_POSTGRES_DB") }}''
     schema: client_acme
     tables:
       - name: processed_acme_patient_claim_202307
